# awesome-codex-plugins

./: .gitignore  CONTRIBUTING.md  README.md  plugins.json
.agents/plugins/: marketplace.json
.claude/: settings.local.json
.github/workflows/: claim-notice.yml  scanner-example-strict.yml  scanner-example.yml  validate-plugin-pr.yml
plugins/6jeffr3y/burpsuite-mcp-bridge/: .codexignore  .mcp.json  CHANGELOG.md  CHANGELOG_CN.md  NOTICE.txt  NOTICE_CN.txt  README.md  README_CN.md  RELEASE_NOTES_v1.1.0.md
plugins/Abhigyan-Shekhar/Waggle-mcp/: pyproject.toml
plugins/Alex0nder/mailagent/: README.md
plugins/AtelierArith/atelier-arith-julia-development-skills/: LICENSE  README.md
plugins/BB-84C/bgs-modding-superpowers/: LICENSE  README.md  SECURITY.md  package.json
plugins/CALLE-AI/call-e-integrations/: README.md
plugins/CarrotGamesStudios/vidseeds-mcp/: README.md
plugins/ChannelerH/codex-skin-packs/: .codexignore  README.md  SECURITY.md
plugins/Colin4k1024/tsp/: README.md  package-lock.json  package.json
plugins/Darko893/mcp-server/: .codexignore  .mcp.json  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
plugins/entropy-data/dataproduct-builder-dbt/skills/dataproduct-bootstrap/templates/: README.md  pyproject.toml
plugins/entropy-data/dataproduct-builder-dbt/skills/dataproduct-bootstrap/templates/models/input_ports/: _models.yml
plugins/entropy-data/dataproduct-builder-dbt/skills/dataproduct-bootstrap/templates/models/output_ports/v1/: _models.yml
scripts/: generate_plugins_json.py  post-claim-notice.py  validate-plugin-pr.py
(+2156 files in other folders)
