[project]
name = "{{DBT_PROJECT_NAME}}"
version = "0.1.0"
description = "{{PURPOSE}}"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "dbt-core",
    "{{DBT_ADAPTER}}",
    "openlineage-dbt",
    "datacontract-cli[all]",
    "entropy-data",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py311"
